OO-4719: Store date of last attempt